--- a/book/book.tex
+++ b/book/book.tex
@@ -796,10 +796,10 @@ instrucciones básicas aparecen en casi todos los lenguajes:
 
 \begin{description}
 
-\item[entrada:] Obtener datos desde el teclado, un archivo, la red o algún
+\item[entrada ({\em input}):] Obtener datos desde el teclado, un archivo, la red o algún
 otro dispositivo.
 
-\item[salida:] Mostrar datos en la pantalla, guardarlos en un
+\item[salida ({\em output}):] Mostrar datos en la pantalla, guardarlos en un
 archivo, enviarlos a través de la red, etc.
 
 \item[matemáticas:] Realizar operaciones matemáticas básicas como la suma y
@@ -2983,8 +2983,8 @@ de función.  Tiene un encabezado que termina con el signo dos puntos y un cuerp
 con sangrías.  El cuerpo puede contener cualquier número de sentencias.
 
 Una sentencia {\tt for} también es llamada {\bf bucle} porque
-el flujo de ejecución recorre el cuerpo y luego vuelve
-hacia arriba.  Es este caso, recorre el cuerpo cuatro veces.
+el flujo de ejecución pasa por el cuerpo y luego vuelve
+hacia arriba.  Es este caso, pasa por el cuerpo cuatro veces.
 \index{bucle}
 
 Esta versión es en realidad un poco diferente del código
@@ -3285,7 +3285,7 @@ señal de que has aprendido algo.
 
 
 \section{Un plan de desarrollo}
-\index{development plan!encapsulation and generalization}
+\index{plan de desarrollo!encapsulamiento y generalización}
 
 Un {\bf plan de desarrollo} es un proceso para escribir programas.  El
 proceso que usamos en este estudio de caso es ``encapsulamiento y
@@ -5546,7 +5546,7 @@ informáticos es la observación de que las instrucciones en un champú,
 
 En el caso de {\tt cuenta\_reg}, podemos probar que el bucle
 termina: si {\tt n} es cero o negativo, el bucle nunca se ejecuta.
-De lo contrario, {\tt n} se hace más pequeño cada vez que se recorre
+De lo contrario, {\tt n} se hace más pequeño cada vez que se pasa por
 el blucle, por lo que eventualmente tenemos que llegar a 0.
 
 Para otros bucles, no es tan fácil decirlo.  Por ejemplo:
@@ -5564,7 +5564,7 @@ def sucesion(n):
 La condición para este bucle es {\tt n != 1}, por lo que el bucle continuará
 hasta que {\tt n} sea {\tt 1}, lo cual hace que la condición sea falsa.
 
-Cada vez que se recorre el bucle, el programa muestra el valor de {\tt n}
+Cada vez que se pasa por el bucle, el programa muestra el valor de {\tt n}
 y luego verifica si es par o impar.  Si es par, {\tt n} se
 divide por 2.  Si es impar, el valor de {\tt n} se reemplaza por
 {\tt n*3 + 1}. Por ejemplo, si el argumento pasado a {\tt sucesion}
@@ -5574,7 +5574,7 @@ Dado que {\tt n} a veces aumenta y a veces disminuye, no hay
 demostración obvia de que {\tt n} alcanzará el 1 alguna vez, o que el programa
 termina.  Para algunos valores particulares de {\tt n}, podemos probar que
 termina.  Por ejemplo, si el valor inicial es una potencia de dos,
-{\tt n} será par cada vez que se recorra el bucle
+{\tt n} será par cada vez que se pase por el bucle
 hasta que alcance el 1. El ejemplo anterior termina con tal sucesión,
 comenzando con 16.
 \index{Collatz conjecture}
@@ -6093,7 +6093,7 @@ for letra in fruta:
     print(letra)
 \end{verbatim}
 %
-Cada vez que se recorre el bucle, el siguiente carácter en la cadena se asigna
+Cada vez que se pasa por el bucle, el siguiente carácter en la cadena se asigna
 a la variable {\tt letra}.  El bucle continúa hasta que no quedan
 caracteres.
 \index{concatenación}
@@ -6552,7 +6552,7 @@ Ahora cuando ejecuto el programa de nuevo, obtengo más información:
 IndexError: string index out of range
 \end{verbatim}
 %
-La primera vez que se recorre el bucle, el valor de {\tt j} es 4,
+La primera vez que se pasa por el bucle, el valor de {\tt j} es 4,
 lo cual está fuera de rango para la cadena \verb"'pots'".
 El índice del último carácter es 3, por lo que el
 valor inicial para {\tt j} debería ser {\tt len(palabra2)-1}.
@@ -6792,349 +6792,349 @@ ofendes fácilmente, encuentra y decodifica algunos.  Solución:
 \end{exercise}
 
 
-\chapter{Case study: word play}
+\chapter{Estudio de caso: juego de palabras}
 \label{wordplay}
 
-This chapter presents the second case study, which involves
-solving word puzzles by searching for words that have certain
-properties.  For example, we'll find the longest palindromes
-in English and search for words whose letters appear in
-alphabetical order.  And I will present another program development
-plan: reduction to a previously solved problem.
+Este capítulo presenta el segundo estudio de caso, el cual involucra
+resolver puzles de palabras buscando palabras que tengan ciertas
+propiedades.  Por ejemplo, encontraremos los palíndromos más largos
+en inglés y buscaremos palabras cuyas letras aparezcan en
+orden alfabético.  Y presentaré otro plan de desarrollo de
+programa: reducción a un problema previamente resuelto.
 
 
-\section{Reading word lists}
+\section{Leer listas de palabras}
 \label{wordlist}
 
-For the exercises in this chapter we need a list of English words.
-There are lots of word lists available on the Web, but the one most
-suitable for our purpose is one of the word lists collected and
-contributed to the public domain by Grady Ward as part of the Moby
-lexicon project (see \url{http://wikipedia.org/wiki/Moby_Project}).  It
-is a list of 113,809 official crosswords; that is, words that are
-considered valid in crossword puzzles and other word games.  In the
-Moby collection, the filename is {\tt 113809of.fic}; you can download
-a copy, with the simpler name {\tt words.txt}, from
+Para los ejercicios de este capítulo necesitamos una lista de palabras en inglés.
+Hay muchas listas de palabras disponibles en la web, pero la más
+adecuada para nuestro propósito es una de las listas de palabras recopiladas y
+contribuidas al dominio público por Grady Ward como parte del proyecto léxico Moby
+(ver \url{http://wikipedia.org/wiki/Moby_Project}).  Es
+una lista de 113,809 palabras de crucigrama oficiales; es decir, palabras que se
+consideran válidas en crucigramas y otros juegos de palabras.  En la
+colección Moby, el nombre del archivo es {\tt 113809of.fic}; puedes descargar
+una copia, con el nombre más simple {\tt words.txt}, en
 \url{http://thinkpython2.com/code/words.txt}.
 \index{Moby Project}
 \index{crosswords}
 
-This file is in plain text, so you can open it with a text
-editor, but you can also read it from Python.  The built-in
-function {\tt open} takes the name of the file as a parameter
-and returns a {\bf file object} you can use to read the file.
-\index{open function}
-\index{function!open}
-\index{plain text}
-\index{text!plain}
-\index{object!file}
-\index{file object}
+Este archivo está en texto plano, por lo que puedes abrirlo con un editor
+de texto, pero también puedes leerlo desde Python.  La función incorporada
+{\tt open} toma el nombre del archivo como parámetro
+y devuelve un {\bf objeto de archivo} que puedes usar para leer el archivo.
+\index{función open}
+\index{open!función}
+\index{texto plano}
+\index{plano!texto}
+\index{objeto de archivo}
+\index{archivo!objeto de}
 
 \begin{verbatim}
 >>> fin = open('words.txt')
 \end{verbatim}
 %
-{\tt fin} is a common name for a file object used for input.  The file
-object provides several methods for reading, including {\tt readline},
-which reads characters from the file until it gets to a newline and
-returns the result as a string: \index{readline method}
-\index{method!readline}
+{\tt fin} es un nombre común para un objeto de archivo usado para la entrada ({\em file input}).  El objeto
+de archivo proporciona varios métodos para la lectura, incluyendo {\tt readline},
+que lee caracteres desde un archivo hasta que llega a una nueva línea y
+devuelve el resultado como una cadena: \index{método readline}
+\index{readline!método}
 
 \begin{verbatim}
 >>> fin.readline()
 'aa\n'
 \end{verbatim}
 %
-The first word in this particular list is ``aa'', which is a kind of
-lava.  The sequence \verb"\n" represents the newline character that
-separates this word from the next.
+La primera palabra en esta lista particular es ``aa'', que es un tipo de
+lava.  La secuencia \verb"\n" representa el carácter nueva línea que
+separa esta palabra de la siguiente.
 
-The file object keeps track of where it is in the file, so
-if you call {\tt readline} again, you get the next word:
+El objeto de archivo hace un seguimiento de dónde está en el archivo, por lo que
+si llamas a {\tt readline} de nuevo, obtienes la palabra siguiente:
 
 \begin{verbatim}
 >>> fin.readline()
 'aah\n'
 \end{verbatim}
 %
-The next word is ``aah'', which is a perfectly legitimate
-word, so stop looking at me like that.
-Or, if it's the newline character that's bothering you,
-we can get rid of it with the string method {\tt strip}:
-\index{strip method}
-\index{method!strip}
+La palabra siguiente es ``aah'', que es una palabra perfectamente legítima,
+así que deja de mirarme así.
+O, si es el carácter nueva línea lo que te molesta,
+podemos deshacernos de este con el método de cadena {\tt strip}:
+\index{método strip}
+\index{strip!método}
 
 \begin{verbatim}
->>> line = fin.readline()
->>> word = line.strip()
->>> word
+>>> linea = fin.readline()
+>>> palabra = linea.strip()
+>>> palabra
 'aahed'
 \end{verbatim}
 %
-You can also use a file object as part of a {\tt for} loop.
-This program reads {\tt words.txt} and prints each word, one
-per line:
-\index{open function}
-\index{function!open}
+Puedes usar también un objeto de archivo como parte de un bucle {\tt for}.
+Este programa lee {\tt words.txt} e imprime cada palabra, una
+por línea:
+\index{función open}
+\index{open!función}
 
 \begin{verbatim}
 fin = open('words.txt')
-for line in fin:
-    word = line.strip()
-    print(word)
+for linea in fin:
+    palabra = linea.strip()
+    print(palabra)
 \end{verbatim}
 %
 
-\section{Exercises}
+\section{Ejercicios}
 
-There are solutions to these exercises in the next section.
-You should at least attempt each one before you read the solutions.
+Hay soluciones a estos ejercicios en la siguiente sección.
+Deberías al menos intentar cada uno antes de leer las soluciones.
 
 \begin{exercise}
-Write a program that reads {\tt words.txt} and prints only the
-words with more than 20 characters (not counting whitespace).
-\index{whitespace}
+Escribe un programa que lea {\tt words.txt} e imprima solo las
+palabras con más de 20 caracteres (sin contar espacios en blanco).
+\index{espacio en blanco}
 
 \end{exercise}
 
 \begin{exercise}
 
-In 1939 Ernest Vincent Wright published a 50,000 word novel called
-{\em Gadsby} that does not contain the letter ``e''.  Since ``e'' is
-the most common letter in English, that's not easy to do.
+En 1939, Ernest Vincent Wright publicó una novela de 50,000 palabras llamada
+{\em Gadsby}, la cual no contiene la letra ``e''.  Dado que la ``e'' es
+la letra más común en el idioma inglés, eso no es fácil de hacer.
 
-In fact, it is difficult to construct a solitary thought without using
-that most common symbol.  It is slow going at first, but with caution
-and hours of training you can gradually gain facility.
+Sin duda, solo imaginar una oración sin usar dicho símbolo más común
+implica una actividad difícil.  Si tardas mucho al principio, hazlo con cuidado
+y trabaja horas para adquirir la habilidad poco a poco.
 
-All right, I'll stop now.
+Basta, ya no sigo más.
 
-Write a function called \verb"has_no_e" that returns {\tt True} if
-the given word doesn't have the letter ``e'' in it.
+Escribe una función llamada \verb"no_tiene_e" que devuelva {\tt True} si
+la palabra dada no incluye la letra ``e''.
 
-Write a program that reads {\tt words.txt} and prints only the words
-that have no ``e''.  Compute the percentage of words in the list
-that have no ``e''.
-\index{lipogram}
-
-\end{exercise}
-
-
-\begin{exercise}
-
-Write a function named {\tt avoids}
-that takes a word and a string of forbidden letters, and
-that returns {\tt True} if the word doesn't use any of the forbidden
-letters.
-
-Write a program that prompts the user to enter a string
-of forbidden letters and then prints the number of words that
-don't contain any of them.
-Can you find a combination of 5 forbidden letters that
-excludes the smallest number of words?
-
-\end{exercise}
-
-
-
-\begin{exercise}
-
-Write a function named \verb"uses_only" that takes a word and a
-string of letters, and that returns {\tt True} if the word contains
-only letters in the list.  Can you make a sentence using only the
-letters {\tt acefhlo}?  Other than ``Hoe alfalfa''?
+Escribe un programa que lea {\tt words.txt} e imprima solo las palabras
+que no tienen ``e''.  Calcula el porcentaje de palabras en la lista
+que no tienen ``e''.
+\index{lipograma}
 
 \end{exercise}
 
 
 \begin{exercise}
 
-Write a function named \verb"uses_all" that takes a word and a
-string of required letters, and that returns {\tt True} if the word
-uses all the required letters at least once.  How many words are there
-that use all the vowels {\tt aeiou}?  How about {\tt aeiouy}?
+Escribe una función con nombre {\tt evita}
+que tome una palabra y una cadena de letras prohibidas y
+devuelva {\tt True} si la palabra no usa ninguna de las letras
+prohibidas.
+
+Escribe un programa que solicite al usuario ingresar una cadena
+de letras prohibidas y luego imprima el número de palabras que
+no contiene ninguna de estas.
+¿Puedes encontrar una combinación de 5 letras prohibidas que
+excluya al menor número de palabras?
+
+\end{exercise}
+
+
+
+\begin{exercise}
+
+Escribe una función con nombre \verb"usa_solo" que tome una palabra y una
+cadena de letras y devuelva {\tt True} si la palabra contiene
+solo letras de la lista.  ¿Puedes crear una oración en inglés usando solo las
+letras {\tt acefhlo}?  ¿Una distinta a ``Hoe alfalfa''?
 
 \end{exercise}
 
 
 \begin{exercise}
 
-Write a function called \verb"is_abecedarian" that returns
-{\tt True} if the letters in a word appear in alphabetical order
-(double letters are ok).
-How many abecedarian words are there?
+Escribe una función con nombre \verb"usa_todas" que tome una palabra y una
+cadena de letras requeridas y devuelva {\tt True} si la palabra
+usa todas las letras requeridas al menos una vez.  ¿Cuántas palabras
+que usan todas las vocales {\tt aeiou} existen?  ¿Qué hay de {\tt aeiouy}?
 
-\index{abecedarian}
+\end{exercise}
+
+
+\begin{exercise}
+
+Escribe una función llamada \verb"es_abecedario" que devuelva
+{\tt True} si las letras en una palabra aparecen en orden alfabético
+(las letras dobles están permitidas).
+¿Cuántas palabras abecedarias existen?
+
+\index{abecedario}
 
 \end{exercise}
 
 
 
-\section{Search}
+\section{Búsqueda}
 \label{search}
-\index{search pattern}
-\index{pattern!search}
+\index{patrón de búsqueda}
+\index{búsqueda!patrón de}
 
-All of the exercises in the previous section have something
-in common; they can be solved with the search pattern we saw
-in Section~\ref{find}.  The simplest example is:
+Todos los ejercicios de la sección anterior tienen algo en
+común; pueden ser resueltos con el patrón de búsqueda que vimos
+en la Sección~\ref{find}.  El ejemplo más simple es:
 
 \begin{verbatim}
-def has_no_e(word):
-    for letter in word:
-        if letter == 'e':
+def no_tiene_e(palabra):
+    for letra in palabra:
+        if letra == 'e':
             return False
     return True
 \end{verbatim}
 %
-The {\tt for} loop traverses the characters in {\tt word}.  If we find
-the letter ``e'', we can immediately return {\tt False}; otherwise we
-have to go to the next letter.  If we exit the loop normally, that
-means we didn't find an ``e'', so we return {\tt True}.
-\index{traversal}
+El bucle {\tt for} recorre los caracteres en {\tt palabra}.  Si encontramos
+la letra ``e'', podemos devolver {\tt False} inmediatamente; de lo contrario
+tenemos que ir a la siguiente letra.  Si terminamos el bucle de manera normal,
+significa que no encontramos una ``e'', por lo cual devolvemos {\tt True}.
+\index{recorrido}
 
-\index{in operator}
-\index{operator!in}
-You could write this function more concisely using the {\tt in}
-operator, but I started with this version because it
-demonstrates the logic of the search pattern.
+\index{operador in}
+\index{in!operador}
+Podrías haber escrito esta función de manera más concisa usando el operador {\tt in},
+pero comencé con esta versión porque
+demuestra la lógica del patrón de búsqueda.
 
-\index{generalization}
-{\tt avoids} is a more general version of \verb"has_no_e" but it
-has the same structure:
+\index{generalización}
+{\tt evita} es una versión más general de \verb"no_tiene_e" pero
+tiene la misma estructura:
 
 \begin{verbatim}
-def avoids(word, forbidden):
-    for letter in word:
-        if letter in forbidden:
+def evita(palabra, prohibidas):
+    for letra in palabra:
+        if letra in prohibidas:
             return False
     return True
 \end{verbatim}
 %
-We can return {\tt False} as soon as we find a forbidden letter;
-if we get to the end of the loop, we return {\tt True}.
+Podemos devolver {\tt False} apenas encontremos una letra prohibida;
+si llegamos al final del bucle, devolvemos {\tt True}.
 
-\verb"uses_only" is similar except that the sense of the condition
-is reversed:
+\verb"usa_solo" es similar, excepto que el sentido de la condición
+es inverso:
 
 \begin{verbatim}
-def uses_only(word, available):
-    for letter in word:
-        if letter not in available:
+def usa_solo(palabra, disponibles):
+    for letra in palabra:
+        if letra not in disponibles:
             return False
     return True
 \end{verbatim}
 %
-Instead of a list of forbidden letters, we have a list of available
-letters.  If we find a letter in {\tt word} that is not in
-{\tt available}, we can return {\tt False}.
+En lugar de una lista de letras prohibidas, tenemos una lista de letras
+disponibles.  Si encontramos una letra en {\tt palabra} que no está en
+{\tt disponibles}, podemos devolver {\tt False}.
 
-\verb"uses_all" is similar except that we reverse the role
-of the word and the string of letters:
+\verb"usa_todas" es similar, excepto que invertimos el rol
+de la palabra y la cadena de letras:
 
 \begin{verbatim}
-def uses_all(word, required):
-    for letter in required:
-        if letter not in word:
+def usa_todas(palabra, requeridas):
+    for letra in requeridas:
+        if letra not in palabra:
             return False
     return True
 \end{verbatim}
 %
-Instead of traversing the letters in {\tt word}, the loop
-traverses the required letters.  If any of the required letters
-do not appear in the word, we can return {\tt False}.
-\index{traversal}
+En lugar de recorrer las letras en {\tt palabra}, el bucle
+recorre las letras requeridas.  Si alguna de las letras requeridas
+no aparece en la palabra, podemos devolver {\tt False}.
+\index{recorrido}
 
-If you were really thinking like a computer scientist, you would
-have recognized that \verb"uses_all" was an instance of a
-previously solved problem, and you would have written:
+Si realmente estuvieras pensando como un informático,
+habrías reconocido que \verb"usa_todas" era una instancia de un
+problema previamente resuelto, y habrías escrito:
 
 \begin{verbatim}
-def uses_all(word, required):
-    return uses_only(required, word)
+def usa_todas(palabra, requeridas):
+    return usa_solo(requeridas, palabra)
 \end{verbatim}
 %
-This is an example of a program development plan called {\bf
-  reduction to a previously solved problem}, which means that you
-recognize the problem you are working on as an instance of a solved
-problem and apply an existing solution.  \index{reduction to a
-  previously solved problem} \index{development plan!reduction}
+Este es un ejemplo de un plan de desarrollo de programa llamado {\bf
+  reducción a un problema previamente resuelto}, lo cual significa que
+reconoces el problema en el que estás trabajando como una instancia de un
+problema resuelto y aplicas una solución existente.  \index{reducción a un
+  problema previamente resuelto} \index{plan de desarrollo!reducción}
 
 
-\section{Looping with indices}
-\index{looping!with indices}
-\index{index!looping with}
+\section{Bucle con índices}
+\index{bucle!con índices}
+\index{índice!bucle con}
 
-I wrote the functions in the previous section with {\tt for}
-loops because I only needed the characters in the strings; I didn't
-have to do anything with the indices.
+Escribí las funciones de la sección anterior con bucles {\tt for}
+porque solo necesitaba los caracteres en las cadenas; No
+tenía que hacer nada con los índices.
 
-For \verb"is_abecedarian" we have to compare adjacent letters,
-which is a little tricky with a {\tt for} loop:
+Para \verb"es_abecedario" tenemos que comparar letras adyacentes,
+lo cual es un poco difícil con un bucle {\tt for}:
 
 \begin{verbatim}
-def is_abecedarian(word):
-    previous = word[0]
-    for c in word:
-        if c < previous:
+def es_abecedario(palabra):
+    anterior = palabra[0]
+    for c in palabra:
+        if c < anterior:
             return False
-        previous = c
+        anterior = c
     return True
 \end{verbatim}
 
-An alternative is to use recursion:
+Una alternativa es usar recursividad:
 
 \begin{verbatim}
-def is_abecedarian(word):
-    if len(word) <= 1:
+def es_abecedario(palabra):
+    if len(palabra) <= 1:
         return True
-    if word[0] > word[1]:
+    if palabra[0] > palabra[1]:
         return False
-    return is_abecedarian(word[1:])
+    return es_abecedario(palabra[1:])
 \end{verbatim}
 
-Another option is to use a {\tt while} loop:
+Otra opción es usar un bucle {\tt while}:
 
 \begin{verbatim}
-def is_abecedarian(word):
+def es_abecedario(palabra):
     i = 0
-    while i < len(word)-1:
-        if word[i+1] < word[i]:
+    while i < len(palabra)-1:
+        if palabra[i+1] < palabra[i]:
             return False
         i = i+1
     return True
 \end{verbatim}
 %
-The loop starts at {\tt i=0} and ends when {\tt i=len(word)-1}.  Each
-time through the loop, it compares the $i$th character (which you can
-think of as the current character) to the $i+1$th character (which you
-can think of as the next).
+Este bucle comienza con {\tt i=0} y termina cuando {\tt i=len(palabra)-1}.  Cada
+vez que se pasa por el bucle, compara al $i$-ésimo carácter (que puedes
+pensarlo como el carácter actual) con el $i+1$-ésimo carácter (que puedes
+pensarlo como el siguiente).
 
-If the next character is less than (alphabetically before) the current
-one, then we have discovered a break in the abecedarian trend, and
-we return {\tt False}.
+Si el siguiente carácter es menor (alfabéticamente anterior) que el
+actual, entonces hemos descubierto que se rompe la tendencia abecedaria y
+devolvemos {\tt False}.
 
-If we get to the end of the loop without finding a fault, then the
-word passes the test.  To convince yourself that the loop ends
-correctly, consider an example like \verb"'flossy'".  The
-length of the word is 6, so
-the last time the loop runs is when {\tt i} is 4, which is the
-index of the second-to-last character.  On the last iteration,
-it compares the second-to-last character to the last, which is
-what we want.
-\index{palindrome}
+Si llegamos al final del bucle sin encontrar una falla, entonces la
+palabra pasa la prueba.  Para convencerte de que el bucle termina
+de manera correcta, considera un ejemplo como \verb"'flossy'".  La
+longitud de la palabra es 6, por lo que
+la última vez que el bucle se ejecuta es cuando {\tt i} es 4, que es el
+índice del penúltimo carácter.  En la última iteración,
+compara el penúltimo carácter con el último, que es
+lo que queremos.
+\index{palíndromo}
 
-Here is a version of \verb"is_palindrome" (see
-Exercise~\ref{palindrome}) that uses two indices; one starts at the
-beginning and goes up; the other starts at the end and goes down.
+Aquí hay una versión de \verb"es_palindromo" (ver
+Ejercicio~\ref{palindrome}) que usa dos índices; uno comienza al
+principio y aumenta; el otro comienza al final y disminuye.
 
 \begin{verbatim}
-def is_palindrome(word):
+def es_palindromo(palabra):
     i = 0
-    j = len(word)-1
+    j = len(palabra)-1
 
     while i<j:
-        if word[i] != word[j]:
+        if palabra[i] != palabra[j]:
             return False
         i = i+1
         j = j-1
@@ -7142,172 +7142,172 @@ def is_palindrome(word):
     return True
 \end{verbatim}
 
-Or we could reduce to a previously solved
-problem and write:
-\index{reduction to a previously solved problem}
-\index{development plan!reduction}
+O podríamos reducir a un problema previamente
+resuelto y escribir:
+\index{reducción a un problema previamente resuelto}
+\index{plan de desarrollo!reducción}
 
 \begin{verbatim}
-def is_palindrome(word):
-    return is_reverse(word, word)
+def es_palindromo(palabra):
+    return es_reverso(palabra, palabra)
 \end{verbatim}
 %
-Using \verb"is_reverse" from Section~\ref{isreverse}.
+Usando \verb"es_reverso" de la Sección~\ref{isreverse}.
 
 
-\section{Debugging}
-\index{debugging}
-\index{testing!is hard}
-\index{program testing}
+\section{Depuración}
+\index{depuración}
+\index{prueba!es difícil}
+\index{prueba de programa}
 
-Testing programs is hard.  The functions in this chapter are
-relatively easy to test because you can check the results by hand.
-Even so, it is somewhere between difficult and impossible to choose a
-set of words that test for all possible errors.
+Probar programas es difícil.  Las funciones de este capítulo son
+relativamente fáciles de probar porque puedes verificar los resultados a mano.
+Aún así, escoger un conjunto de palabras que pruebe todos los errores posibles
+está en algún lugar entre difícil e imposible.
 
-Taking \verb"has_no_e" as an example, there are two obvious
-cases to check: words that have an `e' should return {\tt False}, and
-words that don't should return {\tt True}.  You should have no
-trouble coming up with one of each.
+Tomando a \verb"no_tiene_e" como ejemplo, hay dos casos obvios
+para verificar: las palabras que tienen una `e' deberían devolver {\tt False} y
+las palabras que no la tienen deberían devolver {\tt True}.  No deberías
+tener problemas para proponer una palabra de cada caso.
 
-Within each case, there are some less obvious subcases.  Among the
-words that have an ``e'', you should test words with an ``e'' at the
-beginning, the end, and somewhere in the middle.  You should test long
-words, short words, and very short words, like the empty string.  The
-empty string is an example of a {\bf special case}, which is one of
-the non-obvious cases where errors often lurk.
-\index{special case}
+Dentro de cada caso, hay algunos subcasos menos obvios.  Entre las
+palabras que tienen una ``e'', deberías probar palabras con una ``e'' al
+principio, al final y en algún lugar del medio.  Deberías probar palabras
+largas, palabras cortas y palabras muy cortas, como la cadena vacía.  La
+cadena vacía es un ejemplo de un {\bf caso especial}, que es uno de
+los casos no obvios donde los errores a menudo acechan.
+\index{caso especial}
 
-In addition to the test cases you generate, you can also test
-your program with a word list like {\tt words.txt}.  By scanning
-the output, you might be able to catch errors, but be careful:
-you might catch one kind of error (words that should not be
-included, but are) and not another (words that should be included,
-but aren't).
+Además de los casos de prueba que generes, puedes también probar
+tu programa con una lista de palabras como {\tt words.txt}.  Escudriñando
+la salida, podrías ser capaz de captar los errores, pero ten cuidado:
+podrías captar un tipo de error (palabras que no deberían estar
+incluidas, pero lo están) y no otro (palabras que deberían estar incluidas,
+pero no lo están).
 
-In general, testing can help you find bugs, but it is not easy to
-generate a good set of test cases, and even if you do, you can't
-be sure your program is correct.
-According to a legendary computer scientist:
-\index{testing!and absence of bugs}
+En general, las pruebas pueden ayudarte a encontrar errores, pero no es fácil
+generar un buen conjunto de casos de prueba, e incluso si lo haces, no puedes
+estar seguro de que tu programa está correcto.
+De acuerdo al legendario informático:
+\index{prueba!y ausencia de errores}
 
 \begin{quote}
-Program testing can be used to show the presence of bugs, but never to
-show their absence!
+Se pueden probar programas para mostrar la presencia de errores, ¡pero nunca para
+mostrar su ausencia!
 
 --- Edsger W. Dijkstra
 \end{quote}
 \index{Dijkstra, Edsger}
 
 
-\section{Glossary}
+\section{Glosario}
 
 \begin{description}
 
-\item[file object:] A value that represents an open file.
-\index{file object}
-\index{object!file}
+\item[objeto de archivo:] Un valor que representa un archivo abierto.
+\index{objeto de archivo}
+\index{archivo!objeto de}
 
-\item[reduction to a previously solved problem:] A way of solving a
-  problem by expressing it as an instance of a previously solved
-  problem.  \index{reduction to a previously solved problem}
-  \index{development plan!reduction}
+\item[reducción a un problema previamente resuelto:] Una manera de resolver un
+  problema expresándolo como una instancia de un problema previamente
+  resuelto.  \index{reducción a un problema previamente resuelto}
+  \index{plan de desarrollo!reducción}
 
-\item[special case:] A test case that is atypical or non-obvious
-(and less likely to be handled correctly).
-\index{special case}
+\item[caso especial:] Un caso de prueba que es atípico o no obvio
+(y menos probable de abordar correctamente).
+\index{caso especial}
 
 \end{description}
 
 
-\section{Exercises}
+\section{Ejercicios}
 
 \begin{exercise}
 \index{Car Talk}
 \index{Puzzler}
-\index{double letters}
+\index{letras dobles}
 
-This question is based on a Puzzler that was broadcast on the radio
-program {\em Car Talk}
+Esta pregunta está basada en un Puzzler que fue transmitido en el programa
+de radio {\em Car Talk}
 (\url{http://www.cartalk.com/content/puzzlers}):
 
 \begin{quote}
-Give me a word with three consecutive double letters. I'll give you a
-couple of words that almost qualify, but don't. For example, the word
-committee, c-o-m-m-i-t-t-e-e. It would be great except for the `i' that
-sneaks in there. Or Mississippi: M-i-s-s-i-s-s-i-p-p-i. If you could
-take out those i's it would work. But there is a word that has three
-consecutive pairs of letters and to the best of my knowledge this may
-be the only word. Of course there are probably 500 more but I can only
-think of one. What is the word?
+Dame una palabra con tres letras dobles consecutivas. Te daré un
+par de palabras que casi califican, pero no. Por ejemplo, la palabra
+committee, c-o-m-m-i-t-t-e-e. Sería genial excepto por la `i' que
+se cuela allí. O Mississippi: M-i-s-s-i-s-s-i-p-p-i. Si pudieras
+sacar esas `i' funcionaría. Pero hay una palabra que tiene tres
+pares de letras consecutivos y, por lo que sé, puede ser
+la única palabra. Por supuesto que probablemente hay 500 más pero solo puedo
+pensar en una. ¿Cuál es la palabra?
 \end{quote}
 
-Write a program to find it.
-Solution: \url{http://thinkpython2.com/code/cartalk1.py}.
+Escribe un programa que la encuentre.
+Solución: \url{http://thinkpython2.com/code/cartalk1.py}.
 
 \end{exercise}
 
 
 \begin{exercise}
-Here's another {\em Car Talk}
-Puzzler (\url{http://www.cartalk.com/content/puzzlers}):
+Aquí hay otro Puzzler de {\em Car Talk}
+(\url{http://www.cartalk.com/content/puzzlers}):
 \index{Car Talk}
 \index{Puzzler}
-\index{odometer}
-\index{palindrome}
+\index{odómetro}
+\index{palíndromo}
 
 \begin{quote}
-``I was driving on the highway the other day and I happened to
-notice my odometer. Like most odometers, it shows six digits,
-in whole miles only. So, if my car had 300,000
-miles, for example, I'd see 3-0-0-0-0-0.
+``Estaba conduciendo en la carretera el otro día y me di cuenta de
+mi odómetro. Al igual que la mayoría de los odómetros, muestra seis dígitos,
+solo en millas enteras. Entonces, si mi automóvil tenía 300,000
+millas, por ejemplo, veía 3-0-0-0-0-0.
 
-``Now, what I saw that day was very interesting. I noticed that the
-last 4 digits were palindromic; that is, they read the same forward as
-backward. For example, 5-4-4-5 is a palindrome, so my odometer
-could have read 3-1-5-4-4-5.
+``Ahora, lo que vi ese día fue muy interesante. Me di cuenta de que los
+últimos 4 dígitos eran palíndromo; es decir, se leían igual hacia adelante
+y hacia atrás. Por ejemplo, 5-4-4-5 es un palíndromo, por lo que mi odómetro
+podría haber leído 3-1-5-4-4-5.
 
-``One mile later, the last 5 numbers were palindromic. For example, it
-could have read 3-6-5-4-5-6.  One mile after that, the middle 4 out of
-6 numbers were palindromic.  And you ready for this? One mile later,
-all 6 were palindromic!
+``Una milla más adelante, los últimos 5 números eran palíndromo. Por ejemplo,
+podría haber leído 3-6-5-4-5-6.  Una milla después de eso, los 4 números que están
+al medio de los 6 eran palíndromo.  ¿Y estás listo para esto? Una milla más adelante,
+¡los 6 eran palíndromo!
 
-``The question is, what was on the odometer when I first looked?''
+``La pregunta es, ¿qué había en mi odómetro cuando miré por primera vez?''
 \end{quote}
 
-Write a Python program that tests all the six-digit numbers and prints
-any numbers that satisfy these requirements.
-Solution: \url{http://thinkpython2.com/code/cartalk2.py}.
+Escribe un programa en Python que pruebe todos los números de seis dígitos e imprima
+aquellos números que satisfagan estos requisitos.
+Solución: \url{http://thinkpython2.com/code/cartalk2.py}.
 
 \end{exercise}
 
 
 \begin{exercise}
-Here's another {\em Car Talk} Puzzler you can solve with a
-search (\url{http://www.cartalk.com/content/puzzlers}):
+Aquí hay otro Puzzler de {\em Car Talk} que puedes resolver con una
+búsqueda (\url{http://www.cartalk.com/content/puzzlers}):
 \index{Car Talk}
 \index{Puzzler}
-\index{palindrome}
+\index{palíndromo}
 
 \begin{quote}
-``Recently I had a visit with my mom and we realized that
-the two digits that make up my age when reversed resulted in her
-age. For example, if she's 73, I'm 37. We wondered how often this has
-happened over the years but we got sidetracked with other topics and
-we never came up with an answer.
+``Recientemente tuve una visita con mi mamá y me di cuenta de que
+los dos dígitos que componen mi edad cuando se invierten resulta en su
+edad. Por ejemplo, si ella tiene 73, yo tengo 37. Nos preguntamos cuán a menudo ha
+ocurrido esto a través de los años pero nos desviamos a otros temas y
+nunca dimos con una respuesta.
 
-``When I got home I figured out that the digits of our ages have been
-reversible six times so far. I also figured out that if we're lucky it
-would happen again in a few years, and if we're really lucky it would
-happen one more time after that. In other words, it would have
-happened 8 times over all. So the question is, how old am I now?''
+``Cuando llegué a casa descubrí que los dígitos de nuestras edades han sido
+reversibles seis veces hasta ahora. También descubrí que, si tenemos suerte,
+ocurriría de nuevo en unos años, y si realmente tenemos suerte
+ocurriría una vez más después de eso. En otras palabras, habría
+ocurrido 8 veces en total. Entonces la pregunta es, ¿qué edad tengo ahora?''
 
 \end{quote}
 
-Write a Python program that searches for solutions to this Puzzler.
-Hint: you might find the string method {\tt zfill} useful.
+Escribe un programa en Python que busque soluciones a este Puzzler.
+Pista: podrías encontrar útil el método de cadena {\tt zfill}.
 
-Solution: \url{http://thinkpython2.com/code/cartalk3.py}.
+Solución: \url{http://thinkpython2.com/code/cartalk3.py}.
 
 \end{exercise}
 
